unpackaged/main/default/objects/Billing_Invoice_Payment__c/Billing_Invoice_Payment__c.object-meta.xml
<CustomObject>
    <description>Payments applied to invoices from brand billing systems</description>
    <label>Billing Invoice Payment</label>
    <nameField>
        <displayFormat>BIP-{000000000}</displayFormat>
        <label>Billing Payment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Invoice Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>