unpackaged/main/default/objects/Billing_Invoice_Payment__c/fields/Billing_Account__c.field-meta.xml
<CustomField>
    <fullName>Billing_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Account</label>
    <referenceTo>Billing_Account__c</referenceTo>
    <relationshipLabel>Billing Invoice Payments</relationshipLabel>
    <relationshipName>Billing_Invoice_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>