unpackaged/main/default/objects/Billing_Invoice_Payment__c/fields/Invoice_ID__c.field-meta.xml
<CustomField>
    <fullName>Invoice_ID__c</fullName>
    <label>Invoice ID</label>
    <length>75</length>
    <type>Text</type>
</CustomField>