unpackaged/main/default/objects/Billing_Invoice_Payment__c/fields/Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number__c</fullName>
    <description>Invoice payment was applied to</description>
    <inlineHelpText>Invoice payment was applied to</inlineHelpText>
    <label>Invoice Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>