unpackaged/main/default/objects/Billing_Invoice_Payment__c/fields/Payment_ID__c.field-meta.xml
<CustomField>
    <fullName>Payment_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>External payment id from billing system</description>
    <externalId>true</externalId>
    <label>Payment ID</label>
    <length>75</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>