unpackaged/main/default/objects/Billing_Invoice_Payment__c/fields/Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status__c</fullName>
    <description>Status of payment from billing system</description>
    <label>Payment Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>